--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
 
     <audio id="background-music" autoplay loop hidden>
-        <source src="apple.mp3" type="audio/mpeg">
+        <source src="src/apple.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
     
@@ -179,7 +179,7 @@
             class="relative flex flex-col items-center justify-center mx-auto rounded-lg shadow-lg overflow-hidden p-6 bg-white max-w-5xl"
           >
             <video id="video" class="w-full h-auto rounded-lg" poster="AppleThumbnail.jpg">
-              <source src="IphoneVid.mp4" type="video/mp4" />
+              <source src="src/IphoneVid.mp4" type="video/mp4" />
               Your browser does not support the video tag.
             </video>
             <button
@@ -390,5 +390,5 @@
     </footer>
   </body>
 
-  <script src="index.js"></script>
+  <script src="src/index.js"></script>
 </html>
