--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           <div
             class="relative flex flex-col items-center justify-center mx-auto rounded-lg shadow-lg overflow-hidden p-6 bg-white max-w-5xl"
           >
-            <video id="video" class="w-full h-auto rounded-lg" poster="AppleThumbnail.jpg">
+            <video id="video" class="w-full h-auto rounded-lg" poster="src/AppleThumbnail.jpg">
               <source src="src/IphoneVid.mp4" type="video/mp4" />
               Your browser does not support the video tag.
             </video>
