--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     
                 <div  id="prices" class="md:w-1/2 w-full mx-auto mb-8">
                     <iframe
-                        id="spline-iframe"
+                        id="spline-iframe2"
                         src="https://my.spline.design/iphoneprocopy-b283e29fb0ec2dcd1d2207362e34931d/"
                         frameborder="0"
                         width="100%"
