--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h1
               class="text-4xl Avenir tracking-tighter text-gray-900 md:text-4xl lg:text-3xl"
             >
-              iPhone <i class="fa-solid fa-apple-whole"></i>
+              Affle <i class="fa-solid fa-apple-whole"></i>
             </h1>
           </a>
         </div>
@@ -87,7 +87,7 @@
           <h1
             class="mb-3 sm:text-4xl text-3xl items-center Avenir xl:w-2/2 text-gray-900"
           >
-            iPhone 45
+            iPhone 45 <i class="fa-solid fa-apple-whole"></i>
           </h1>
           <h1
             class="mb-5 sm:text-6xl text-5xl items-center Avenir xl:w-2/2 text-gray-900 font-bold"
@@ -256,7 +256,7 @@
         <div class="max-w-6xl mx-auto px-4 sm:px-6 text-center">
             <div class="py-24 md:py-36">
                 <h1 class="mb-5 text-6xl Avenir font-semibold text-gray-900">
-                    iPhone 45
+                    iPhone 45 <i class="fa-solid fa-apple-whole"></i>
                 </h1>
                 <h2 class="mb-9 text-3xl font-semibold text-gray-600">
                     Visionary Intelligence
@@ -321,7 +321,7 @@
         <div class="container px-5 mx-auto lg:px-24">
             <div class="flex flex-col w-full mb-8 text-left lg:text-center">
                 <h1 class="mb-4 text-3xl font-bold text-black">
-                    Checkout Our Different Products
+                    Checkout Our Different Products <i class="fa-brands fa-opencart"></i>
                 </h1>
                 <p class="mb-6 text-lg text-gray-600">
                     Explore our latest offerings designed to elevate your experience.
@@ -332,7 +332,7 @@
                 <div class="text-center bg-white rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300">
                     <iframe src='https://my.spline.design/applewatchcopy-d7fcb84be4df1f09f90389edf27b269e/' class="w-full h-64 rounded-t-lg" frameborder='0'></iframe>
                     <div class="p-4">
-                        <h3 class="mt-4 text-xl font-semibold text-gray-900">Apple Watch</h3>
+                        <h3 class="mt-4 text-xl font-semibold text-gray-900"><i class="fa-solid fa-stopwatch"></i> Apple Watch</h3>
                         <p class="mt-2 text-gray-500">Stay connected and track your fitness goals.</p>
                     </div>
                 </div>
@@ -340,7 +340,7 @@
                 <div class="text-center bg-white rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300">
                     <iframe src="https://my.spline.design/nintendoswitchcopy-3cd9cdd60586ba2add364533c358d0ec/" class="w-full h-64 rounded-t-lg" frameborder="0"></iframe>
                     <div class="p-4">
-                        <h3 class="mt-4 text-xl font-semibold text-gray-900">N-Switch</h3>
+                        <h3 class="mt-4 text-xl font-semibold text-gray-900"><i class="fa-solid fa-gamepad"></i> N-Switch</h3>
                         <p class="mt-2 text-gray-500">Play your favorite games anytime, anywhere.</p>
                     </div>
                 </div>
@@ -348,7 +348,7 @@
                 <div class="text-center bg-white rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300">
                     <iframe src="https://my.spline.design/polaroidgocopy-54fc3992fe9b229f84287fb016991235/" class="w-full h-64 rounded-t-lg" frameborder="0"></iframe>
                     <div class="p-4">
-                        <h3 class="mt-4 text-xl font-semibold text-gray-900">Polaroid</h3>
+                        <h3 class="mt-4 text-xl font-semibold text-gray-900"><i class="fa-solid fa-camera-retro"></i> Polaroid</h3>
                         <p class="mt-2 text-gray-500">Capture your moments instantly with style.</p>
                     </div>
                 </div>
@@ -384,7 +384,7 @@
             </div>
     
             <div class="mt-8 border-t border-gray-700 pt-4">
-                <p class="text-center text-gray-400 text-sm">&copy; 2024 iPhone Up. All rights reserved.</p>
+                <p class="text-center text-gray-400 text-sm">&copy; 2024 Affle Up. All rights reserved.</p>
             </div>
         </div>
     </footer>
