--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     iPhone 45 <i class="fa-solid fa-apple-whole"></i>
                 </h1>
                 <h2 class="mb-9 text-3xl font-semibold text-gray-600">
-                    Visionary Intelligence
+                    Interact with our model.
                 </h2>
                 <p class="mb-8 text-lg text-gray-500">
                     Experience cutting-edge technology designed to enhance your digital lifestyle.
